Corrected Alignment
Corrected info bar and canvas padding

--- a/styles.css
+++ b/styles.css
@@ -466,7 +466,15 @@ button {
     display: none;
   }
 
+  .info-bar {
+    padding: 0 20px;
+  }
+
+  .artboard {
+    padding: 0 20px;
+  }
+
   .canvas {
-    width: 80vw;
+    width: initial;
   }
 }
